2008-02-14  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/balance.cc, DLD-FUNCTIONS/qz.cc:
	Don't check f77_exception_encountered.

	* sighandlers.cc (user_abort): If interrupting immediately, set
	octave_interrupt_state if it is not already set.

	* pt-stmt.cc (tree_statement::eval): Catch execution exceptions.

	* octave.cc (lo_error_handler): New static function.
	(initialize_error_handlers): Set liboctave_error_handler to
	lo_error_handler, not error.

	* DLD-FUNCTIONS/urlwrite.cc (urlget): Call octave_rethrow_exception
	instead of octave_throw_interrupt_exception.
	* utils.cc (BEGIN_INTERRUPT_IMMEDIATELY_IN_FOREIGN_CODE_FOR_VSNPRINTF): 
	Likewise.

2008-02-12  David Bateman  <dbateman@free.fr>

	* graphics.h.in: Implement the cdatamapping property in patch and
	image objects.

2008-02-12  John W. Eaton  <jwe@octave.org>

	* pt-loop.cc (tree_simple_for_command::eval): Compute range
	element with multiplication.

2008-02-11  John W. Eaton  <jwe@octave.org>

	* Makefile.in ($(MAKEDEPS)): Skip dependencies if omit_deps is defined.

2008-02-09  John W. Eaton  <jwe@octave.org>

	* pr-output.cc (set_range_format): Eliminate sign arg.
	Change all callers.

2008-02-08  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (octave_struct::subsref): Allow Cell::index to resize.

	* input.cc (interactive_input): Eliminate debug arg.  Change All uses.
	(get_user_input): Don't process input_buf if there is an error.
	Call reset_error_handler instead of setting error_state to 0.

2008-02-07  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::sort): New functions.

2008-02-07  David Bateman  <dbateman@free.fr>

	* Makefile.in (DLD_XSRC): Delete spkron.cc.
	* DLD-FUNCTIONS/spkron.cc: Delete.
	* DLD-FUNCTIONS/kron.cc: Include here and dispatch to the sparse
	version if either argument is sparse.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* Makefile.in (parse.cc): Also use --defines option for bison.

2008-02-06  Michael Goffioul  <michael.goffioul@gmail.com>
